--- a/LoginDemo/src/main/AndroidManifest.xml
+++ b/LoginDemo/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.YangZhao1">
         <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_main" />
+        <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
