--- a/LoginDemo/src/main/AndroidManifest.xml
+++ b/LoginDemo/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.YangZhao1">
+        android:theme="@style/Theme.Wechat">
         <activity
             android:name=".MainActivity"
             android:exported="false"
@@ -17,11 +17,11 @@
         <activity
             android:name=".LoginActivity"
             android:exported="false"
-            android:theme="@style/Theme.YangZhao1.NoActionBar" />
+            android:theme="@style/Theme.Wechat.NoActionBar" />
         <activity
             android:name=".LaunchActivity"
             android:exported="true"
-            android:theme="@style/Theme.YangZhao1.NoActionBar">
+            android:theme="@style/Theme.Wechat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
