--- a/LoginDemo/src/main/AndroidManifest.xml
+++ b/LoginDemo/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ServiceActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Wechat.NoActionBar">
+        </activity>
     </application>
-
 </manifest>
