--- a/LoginDemo/src/main/AndroidManifest.xml
+++ b/LoginDemo/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Wechat">
         <activity
+            android:name=".SignUpActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="false"
             android:label="@string/title_activity_main" />
@@ -31,7 +34,7 @@
         <activity
             android:name=".ServiceActivity"
             android:exported="true"
-            android:theme="@style/Theme.Wechat.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.Wechat.NoActionBar"></activity>
     </application>
+
 </manifest>
