--- a/LoginDemo/src/main/AndroidManifest.xml
+++ b/LoginDemo/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:theme="@style/Theme.Wechat">
         <activity
             android:name=".SettingActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.Wechat.Settings"/>
         <activity
             android:name=".SignUpActivity"
             android:exported="false" />
