[demo] resource usage

--- a/FirstApp/src/main/AndroidManifest.xml
+++ b/FirstApp/src/main/AndroidManifest.xml
@@ -23,6 +23,11 @@
             android:exported="true">
 
         </activity>
+        <activity
+            android:name=".ResourceActivity"
+            android:exported="true">
+
+        </activity>
     </application>
 
 </manifest>
