--- a/FirstApp/src/main/AndroidManifest.xml
+++ b/FirstApp/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.YangZhao1">
         <activity
+            android:name=".RecycleViewActivity"
+            android:exported="true" />
+        <activity
             android:name=".AAA"
             android:exported="true">
             <intent-filter>
@@ -20,14 +23,10 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"/>
         <activity
             android:name=".ResourceActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"/>
     </application>
 
 </manifest>
