--- a/MyWeChat/src/main/AndroidManifest.xml
+++ b/MyWeChat/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.ytu.logindemo">
+    package="edu.ytu.wechat">
 
     <application
-        android:name=".MyApplication"
+        android:name="edu.ytu.wechat.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,20 +11,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Wechat">
         <activity
-            android:name=".SettingActivity"
+            android:name="edu.ytu.wechat.SettingActivity"
             android:exported="false" />
         <activity
-            android:name=".SignUpActivity"
+            android:name="edu.ytu.wechat.SignUpActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="edu.ytu.wechat.MainActivity"
             android:exported="false"
             android:label="@string/title_activity_main" />
         <activity
-            android:name=".LoginActivity"
+            android:name="edu.ytu.wechat.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".LaunchActivity"
+            android:name="edu.ytu.wechat.LaunchActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,7 +33,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ServiceActivity"
+            android:name="edu.ytu.wechat.ServiceActivity"
             android:exported="false" />
     </application>
 
