--- a/MyWeChat/src/main/AndroidManifest.xml
+++ b/MyWeChat/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="edu.ytu.wechat">
 
     <application
-        android:name="edu.ytu.wechat.MyApplication"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,20 +11,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Wechat">
         <activity
-            android:name="edu.ytu.wechat.SettingActivity"
+            android:name=".ui.home.ChatActivity"
             android:exported="false" />
         <activity
-            android:name="edu.ytu.wechat.SignUpActivity"
+            android:name=".SettingActivity"
             android:exported="false" />
         <activity
-            android:name="edu.ytu.wechat.MainActivity"
+            android:name=".SignUpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
             android:exported="false"
             android:label="@string/title_activity_main" />
         <activity
-            android:name="edu.ytu.wechat.LoginActivity"
+            android:name=".LoginActivity"
             android:exported="false" />
         <activity
-            android:name="edu.ytu.wechat.LaunchActivity"
+            android:name=".LaunchActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,7 +36,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="edu.ytu.wechat.ServiceActivity"
+            android:name=".ServiceActivity"
             android:exported="false" />
     </application>
 
