--- a/FirstApp/src/main/AndroidManifest.xml
+++ b/FirstApp/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.ytu.yangzhao">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -9,6 +8,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.YangZhao1">
+        <activity
+            android:name=".IntentTestActivity"
+            android:exported="true" />
         <activity
             android:name=".RecycleViewActivity"
             android:exported="true" />
@@ -23,16 +25,9 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".ResourceActivity"
-            android:exported="true"/>
-        <activity
-            android:name=".FriendCircleActivity"
-            android:exported="true"/>
-        <activity
-            android:name=".ShowImageActivity"
-            android:exported="true"/>
+            android:exported="true" />
     </application>
-
 </manifest>
