--- a/MyWeChat/build.gradle
+++ b/MyWeChat/build.gradle
@@ -32,6 +32,9 @@ android {
 }
 
 dependencies {
+    implementation 'pub.devrel:easypermissions:3.0.0'
+    implementation("io.github.g00fy2.quickie:quickie-bundled:1.4.2")
+    implementation 'com.github.hpuhsp:QRScanner:1.6.2' // deprecate
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
